2026-01-05 Java file half made