@@ -67,4 +67,4 @@ echo "build finished"
 sleep 1
 echo "launching eu/cqrxs/gui/CqrJdFrame.java"
 sleep 1
-java -cp $MYCLASSPATH eu/cqrxs/gui/CqrJdFrame.java
+java --enable-native-access=ALL-UNNAMED -cp $MYCLASSPATH eu/cqrxs/gui/CqrJdFrame.java
